# faststream

./: .dockerignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  CITATION.cff  CNAME  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  index.html  justfile  pyproject.toml  ruff.toml  serve.py
.cursor/rules/: faststream.mdc
.devcontainer/: setup.sh
.github/: CODEOWNERS  CONTRIBUTING.md  labeler.yml
.github/workflows/: check-md-code-blocks.yaml  docs_build.yaml  docs_deploy.yaml  docs_update-release-notes.yaml  gh_pages_deploy_manual.yaml  pr_automerge.yaml  pr_autoupdate.yaml  pr_labeler.yaml  pr_tests.yaml  pr_update-linting-and-api-references.yaml  publish_coverage.yaml  release_pypi.yaml
0.5/: 404.html  index.html  objects.inv  sitemap.xml
0.5/confluent/ack/: index.html
0.5/confluent/message/: index.html
0.5/confluent/security/: index.html
0.5/faststream/: index.html
0.5/faststream-people/: index.html
0.5/getting-started/: index.html
0.5/getting-started/cli/: index.html
0.5/getting-started/context/: index.html
0.5/getting-started/dependencies/: index.html
0.5/getting-started/lifespan/: index.html
0.5/getting-started/publishing/: index.html
0.5/getting-started/subscription/: index.html
0.5/howto/kafka/: index.html
0.5/howto/nats/: index.html
0.5/kafka/: index.html
0.5/kafka/Publisher/: index.html
0.5/kafka/Subscriber/: index.html
0.5/kafka/security/: index.html
0.5/nats/: index.html
0.5/nats/message/: index.html
0.5/nats/publishing/: index.html
0.5/nats/rpc/: index.html
0.5/public_api/: index.html
0.5/rabbit/: index.html
0.5/rabbit/ack/: index.html
0.5/rabbit/declare/: index.html
0.5/rabbit/examples/: index.html
0.5/redis/: index.html
0.5/redis/pipeline/: index.html
0.5/redis/pubsub/: index.html
0.5/release/: index.html
docs/: README.md  create_api_docs.py  docs.py  mkdocs.yml  update_releases.py
docs/docs/: SUMMARY.md  navigation_template.txt
docs/docs/en/: faststream.md  release.md
docs/docs/javascripts/: gurubase-widget.js
docs/includes/en/: env-context.md
docs/overrides/: home.html
docs/templates/: redirect.html
examples/: e04_msg_filter.py
faststream/: __about__.py  __main__.py  _compat.py  app.py  exceptions.py  security.py
faststream/_internal/: _compat.py  application.py  basic_types.py  middlewares.py  producer.py  proto.py  types.py
faststream/_internal/broker/: __init__.py  abc_broker.py  broker.py  config.py  pub_base.py  registrator.py  router.py
faststream/_internal/cli/: docs.py  main.py  options.py
faststream/_internal/configs/: __init__.py  broker.py  endpoint.py  specification.py
faststream/_internal/context/: context_type.py  repository.py  resolve.py
faststream/_internal/di/: __init__.py  config.py
faststream/_internal/endpoint/: base.py  call_wrapper.py  usecase.py  utils.py
faststream/_internal/fastapi/: __init__.py  _compat.py  config.py  context.py  get_dependant.py  route.py  router.py
faststream/_internal/logger/: __init__.py  formatter.py  logger_proxy.py  logging.py  params_storage.py  state.py
faststream/_internal/state/: broker.py  producer.py
faststream/_internal/subscriber/: configs.py  proto.py  specified.py  usecase.py
faststream/_internal/testing/: app.py  ast.py  broker.py
faststream/_internal/utils/: __init__.py  functions.py  path.py
faststream/asgi/: __init__.py  app.py  factories.py  handlers.py  response.py  types.py  websocket.py
faststream/asyncapi/: generate.py
faststream/asyncapi/schema/: main.py  operations.py
faststream/broker/core/: logging.py  usecase.py
faststream/broker/fastapi/: get_dependant.py  route.py  router.py
faststream/broker/subscriber/: mixins.py  proto.py  usecase.py
faststream/cli/: main.py
faststream/cli/supervisors/: asgi_multiprocess.py
faststream/cli/utils/: logs.py
faststream/confluent/: __init__.py  client.py  config.py  message.py  parser.py  response.py  security.py  testing.py
faststream/confluent/broker/: __init__.py  broker.py  logging.py  registrator.py  router.py
faststream/confluent/configs/: __init__.py  broker.py  usecase.py
faststream/confluent/fastapi/: fastapi.py
faststream/confluent/helpers/: __init__.py  admin.py  client.py  config.py
faststream/confluent/opentelemetry/: middleware.py  provider.py
faststream/confluent/prometheus/: middleware.py  provider.py
faststream/confluent/publisher/: config.py  factory.py  fake.py  producer.py  specification.py  specified.py  state.py  usecase.py
faststream/kafka/: __init__.py  listener.py  response.py  security.py  testing.py
faststream/kafka/broker/: broker.py  (+3 more)
faststream/message/: message.py  utils.py
faststream/middlewares/: __init__.py  exception.py  logging.py
faststream/nats/: __init__.py  message.py  parser.py  response.py  security.py  testing.py
faststream/opentelemetry/: baggage.py  middleware.py
faststream/params/: params.py
faststream/prometheus/: container.py  manager.py  middleware.py
faststream/rabbit/: __init__.py  parser.py  response.py  router.py  security.py  testing.py  types.py  utils.py
faststream/redis/: __init__.py  annotations.py  message.py  parser.py  response.py  security.py  testing.py
faststream/response/: response.py  utils.py
faststream/specification/: __init__.py
faststream/testing/: broker.py
latest/: objects.inv  sitemap.xml
latest/api/: index.html
latest/confluent/: index.html
latest/scheduling/: index.html
scripts/: build-docs-pre-commit.sh  lint-pre-commit.sh  static-pre-commit.sh  test.sh
tests/: conftest.py  marks.py  tools.py
tests/asgi/: testcase.py
tests/asyncapi/: test_asgi.py  test_fastapi_router.py
tests/cli/: conftest.py  test_asgi_cli.py  test_asyncapi_docs.py  test_logs.py  test_publish.py  test_run.py  test_run_asgi.py  test_version.py  test_worker_id_extra_option.py
tests/log/: test_formatter.py  test_logging.py
tests/mypy/: kafka.py  nats.py  rabbit.py  redis.py
tests/opentelemetry/: basic.py
tests/prometheus/: basic.py  test_metrics.py  utils.py
tests/utils/: test_handler_lock.py
(+2328 files in other folders)
